[gd_scene load_steps=15 format=3 uid="uid://bnccpkg8tqvj"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_s15e6"]
[ext_resource type="Texture2D" uid="uid://qfbngaq8op61" path="res://sprites/label.png" id="2_8q5wv"]
[ext_resource type="Texture2D" uid="uid://b68mccq5bi57b" path="res://sprites/shadow.png" id="2_liftt"]
[ext_resource type="Texture2D" uid="uid://c2gmudvsf7kl6" path="res://sprites/platform.png" id="3_jlnbm"]
[ext_resource type="Texture2D" uid="uid://dim6mvtlbitk6" path="res://sprites/player.png" id="4_yegw1"]
[ext_resource type="Texture2D" uid="uid://ce43slpnt3v33" path="res://sprites/mobs/slime.png" id="6_0706g"]
[ext_resource type="AudioStream" uid="uid://nvablqgy3t3k" path="res://sounds/step.wav" id="6_dbyh7"]
[ext_resource type="AudioStream" uid="uid://clnkv7f87pl11" path="res://sounds/hit.wav" id="8_n4tnn"]
[ext_resource type="Texture2D" uid="uid://dk5mv3272s6oc" path="res://sprites/drop.png" id="9_j23h0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pn08w"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7v3b"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_ri370"]
resource_name = "slime_stan"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("player/Platform/Player/Slime:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hit:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("player/Platform/Player/Slime:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("slime_drop:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("player/Platform/Player/Slime:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hiugp"]
_data = {
"slime_stan": SubResource("Animation_ri370")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bn4dd"]
emission_shape = 1
emission_sphere_radius = 3.0
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
radial_accel_min = 60.0
radial_accel_max = 70.0
scale_min = 0.5

[node name="player" type="Node2D"]
scale = Vector2(0.9, 0.9)
script = ExtResource("1_s15e6")

[node name="label" type="Node2D" parent="."]
visible = false

[node name="Label" type="Sprite2D" parent="label"]
texture = ExtResource("2_8q5wv")

[node name="player" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="player"]
modulate = Color(1, 1, 1, 0.392157)
z_index = -1
position = Vector2(0, 1.11111)
texture = ExtResource("2_liftt")
offset = Vector2(0, 2)

[node name="Platform" type="Sprite2D" parent="player"]
texture = ExtResource("3_jlnbm")

[node name="Player" type="Sprite2D" parent="player/Platform"]
position = Vector2(0, -4)
texture = ExtResource("4_yegw1")

[node name="Slime" type="Sprite2D" parent="player/Platform/Player"]
visible = false
texture = ExtResource("6_0706g")

[node name="press" type="Area2D" parent="player/Platform"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Platform/press"]
shape = SubResource("RectangleShape2D_pn08w")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collide_with_areas = true
collide_with_bodies = false

[node name="player" type="Area2D" parent="RayCast2D"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCast2D/player"]
shape = SubResource("RectangleShape2D_s7v3b")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_dbyh7")
volume_db = -20.0
bus = &"Sound"

[node name="xod" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_n4tnn")
volume_db = -15.0
bus = &"Sound"

[node name="slime" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hiugp")
}

[node name="slime_drop" type="GPUParticles2D" parent="."]
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_bn4dd")
texture = ExtResource("9_j23h0")
lifetime = 0.6
one_shot = true
speed_scale = 2.0
explosiveness = 1.0

[connection signal="area_entered" from="player/Platform/press" to="." method="_on_press_area_entered"]
[connection signal="area_entered" from="RayCast2D/player" to="." method="_on_player_area_entered"]
[connection signal="area_exited" from="RayCast2D/player" to="." method="_on_player_area_exited"]
[connection signal="timeout" from="xod" to="." method="_on_timer_timeout"]
